# itspersonal0-Integration_of_AI_Blockchain_IoT

./: .env  Cargo.toml  README.md
src/: ai_model.rs  blockchain.rs  integration.rs  iot_device.rs  llm_integration.rs  main.rs
