[package]
name = "blockchain-ai-iot"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10.6"
chrono = "0.4.23"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }
reqwest = { version = "0.11.14", features = ["json"] }
dotenv = "0.15.0"